@@ -60,20 +60,20 @@ or MathML
 .
 .SY @g@eqn
 .RB [ \-CNrR ]
-.RB [ \- d
+.RB [ \- d\~\c
 .IR xy ]
-.RB [ \-f
-.IR F ]
-.RB [ \-m
-.IR n ]
-.RB [ \-M
-.IR dir ]
-.RB [ \-p
-.IR n ]
-.RB [ \-s
-.IR n ]
-.RB [ \-T
-.IR dev ]
+.RB [ \-f\~\c
+.IR global-italic-font ]
+.RB [ \-m\~\c
+.IR minimum-type-size ]
+.RB [ \-M\~\c
+.IR eqnrc-directory ]
+.RB [ \-p\~\c
+.IR super/subscript-size-reduction ]
+.RB [ \-s\~\c
+.IR global-type-size ]
+.RB [ \-T\~\c
+.IR device ]
 .RI [ file\~ .\|.\|.]
 .YS
 .
@@ -192,9 +192,7 @@ There are some references to the differences between \*[tx] and GNU
 below;
 these may safely be ignored if you do not know \*[tx].
 .
-.
-.P
-Four points are worth special note.
+Four points are worth note.
 .
 .
 .IP \[bu] 3n
